# lipase

./: lipase.cabal  stack.yaml
app/: Main.hs
src/: FattyAcid.hs  Report.hs  Results.hs  Spectra.hs  Triacylglycerol.hs
test/: Spec.hs
test/Lipase/: FattyAcidSpec.hs  SpectraSpec.hs  TriacylglycerolSpec.hs
