name:                lipase
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/lipase#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Thomas
maintainer:          Michaelt293@gmail.com
copyright:           2016 Michael Thomas
category:            Lipid analysis
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Spectra
                     , Triacylglycerol
                     , FattyAcid
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , lens
                     , cassava
                     , text
                     , vector
                     , bytestring
                     , isotope
  ghc-options:         -Wall
  default-language:    Haskell2010

executable lipase-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , directory
                     , lipase
                     , isotope
                     , cassava
  default-language:    Haskell2010

test-suite lipase-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Lipase.FattyAcidSpec
                     , Lipase.SpectraSpec
                     , Lipase.TriacylglycerolSpec
  main-is:             Spec.hs
  build-depends:       base
                     , lipase
                     , isotope
                     , lens
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/lipase
